# ai-vtt-agents-team

./: .gitignore  README.md  README_EN.md  design_spec.md  pyproject.toml
config/: agent_config.json
src/: main.py
src/agents/: __init__.py  keyframe.py  proofreader.py  summarizer.py  transcriber.py  translator.py
src/config/: agent_config.json
src/pipelines/: __init__.py  state_db.py  vtt_pipeline.py
src/tools/: __init__.py  md_to_docx.py  video_splitter.py  video_tool.py  whisper_tool.py
src/web/: app.py
src/web/static/: main.js  style.css
src/web/templates/: index.html
